--- a/404.html
+++ b/404.html
@@ -68,7 +68,7 @@
         '/home-mobile',
         '/blogs',
         '/blogs/creating-a-website-with-flask',
-        '/authors/itsbailey',
+        '/authors/itsbaileyx',
         '/authors/',
         '/authors/rangerrhino23',
         '/blogs/deeper-exploration-of-tkinter',
@@ -99,7 +99,7 @@
         '/Blogs',
         '/Blogs/Creating-A-Website-With-Flask',
         '/Authors/',
-        '/Authors/ItsBailey',
+        '/Authors/ItsbaileyX',
         '/Authors/RangerRhino23',
         '/Blogs/Deeper-Exploration-of-Tkinter',
         '/Blogs/Desktop-Applications-With-Tkinter',
@@ -157,7 +157,7 @@
         <p>
           Correct URL and webpage not responding?
           <br>Contact us at:<br>
-          <a href="mailto:baileyleah542@gmail.com">Itsbailey - email</a><br>
+          <a href="mailto:baileyleah542@gmail.com">ItsbaileyX - email</a><br>
           <a href="mailto:RangerRhino23@outlook.com">RangerRhino - email</a>
         </p>
     </div>
