--- a/Blogs/Creating-A-Website-With-Flask.html
+++ b/Blogs/Creating-A-Website-With-Flask.html
@@ -241,7 +241,7 @@ app = Flask(__name__, static_folder="static", template_folder="HTML")
             &bullet; Portforwarding can allow others to connect to your flask website.
           </p>
           <br><br><br>
-    <p>Created by <a href="../authors/ItsBailey">ItsBailey</a></p>
+    <p>Created by <a href="../authors/ItsbaileyX">ItsbaileyX</a></p>
     with the help of <a href="../authors/RangerRhino23">RangerRhino23</a>
     <br><br><br><br><br><br><br><br><br>
     <a class="button" href="../Home">Back To Home</a>
