--- a/Blogs/Making-A-Chatbot-With-Python.html
+++ b/Blogs/Making-A-Chatbot-With-Python.html
@@ -216,7 +216,7 @@ while True:
         Feel free to experiment with different prompt messages, parameters, and models to improve the chatbot's performance.
         And thats all from me, make sure to check out the other blogs on this site and have a blessed day.
     </p><br>
-    <p>Created by <a href="../authors/ItsBailey">ItsBailey</a></p>
+    <p>Created by <a href="../authors/ItsbaileyX">ItsbaileyX</a></p>
     <br><br><br><br><br><br><br>
 <script>
   function copyCode(elementId) {
