--- a/Blogs/Template.html
+++ b/Blogs/Template.html
@@ -132,7 +132,7 @@
 
     <br><br><br>
     <p>Created by <a href="../authors/RangerRhino23">RangerRhino23</a></p>
-    <p>Created by <a href="../authors/ItsBailey" style="color: salmon; text-decoration: none;">ItsBailey</a></p>
+    <p>Created by <a href="../authors/ItsbaileyX" style="color: salmon; text-decoration: none;">ItsbaileyX</a></p>
     <br><br><br><br><br><br><br><br><br>
     <a class="button" href="../Home">Back To Home</a>
 <script>
