--- a/Blogs/The-History-Of-Python.html
+++ b/Blogs/The-History-Of-Python.html
@@ -189,7 +189,7 @@
     </p>
 
     <br><br><br>
-    <p>Created by <a href="../authors/ItsBailey">ItsBailey</a></p>
+    <p>Created by <a href="../authors/ItsbaileyX">ItsbaileyX</a></p>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <a class="button" href="../Home">Back To Home</a>
 <script>
