--- a/Blogs/Types-Of-Modules-And-Using-Them.html
+++ b/Blogs/Types-Of-Modules-And-Using-Them.html
@@ -237,7 +237,7 @@ print(name)
       to use with prefabs like a platform controller and the "FPC" AKA First person controller.
       Overall ursina is one the best engines for python out there and it was the first ever engine
       I ever used to make a 3D game. If you wanna try out one of my games with ursina you can by going to
-      my github repo and downloading it <a href="https://github.com/ItsbaileyX3525/amogus-clicker" style="color: salmon; text-decoration: none;">here</a>
+      my github repo and downloading it <a href="https://github.com/ItsbaileyXX3525/amogus-clicker" style="color: salmon; text-decoration: none;">here</a>
       or you can try the web-based version <a href="https://baileyswebsite.ddns.net/Games/AmogusClicker" style="color: salmon; text-decoration: none;">here</a>
     </p>
     <h2>In conclusion</h2>
@@ -248,7 +248,7 @@ print(name)
       a certain module. Thank you for reading this blog and I can't wait to see you in the next blog!
     </p>
 <br><br><br>
-    <p>Created by <a href="../authors/ItsBailey" style="color: salmon; text-decoration: none;">ItsBailey</a></p>
+    <p>Created by <a href="../authors/ItsbaileyX" style="color: salmon; text-decoration: none;">ItsbaileyX</a></p>
     <br><br><br><br><br><br><br><br><br>
     <a class="button" href="../Home">Back To Home</a>
 <script>
