--- a/Blogs/Creating-A-Website-With-Flask-Mobile.html
+++ b/Blogs/Creating-A-Website-With-Flask-Mobile.html
@@ -111,7 +111,7 @@
 <header>
   <div id="side-menu" style="height: 120px;">
 		<div class="menu-item"><a href="../Home-Mobile">Home</a></div>
-    <div class="menu-item"><a href="../Authors/ItsBailey">Author</a></div>
+    <div class="menu-item"><a href="../Authors/ItsbaileyX">Author</a></div>
 	</div>
 	<div id="menu-toggle" style="font-size: x-large">&#9776;</div>
 	<script>
@@ -267,7 +267,7 @@ app = Flask(__name__, static_folder="static", template_folder="HTML")
           &bullet; Portforwarding can allow others to connect to your flask website.
         </p>
         <br><br><br>
-  <p>Created by <a href="../authors/ItsBailey">ItsBailey</a></p>
+  <p>Created by <a href="../authors/ItsbaileyX">ItsbaileyX</a></p>
   with the help of <a href="../authors/RangerRhino23">RangerRhino23</a>
   <br><br><br>
   <a class="button" href="../Home">Back To Home</a>
