--- a/Blogs/Creating-Minecraft-In-Ursina-Mobile.html
+++ b/Blogs/Creating-Minecraft-In-Ursina-Mobile.html
@@ -111,7 +111,7 @@
 <header>
   <div id="side-menu" style="height: 120px;">
 		<div class="menu-item"><a href="../Home-Mobile">Home</a></div>
-    <div class="menu-item"><a href="../Authors/ItsBailey">Author</a></div>
+    <div class="menu-item"><a href="../Authors/ItsbaileyX">Author</a></div>
 	</div>
 	<div id="menu-toggle" style="font-size: x-large">&#9776;</div>
 	<script>
