--- a/Blogs/Making-A-Chatbot-With-Python-Mobile.html
+++ b/Blogs/Making-A-Chatbot-With-Python-Mobile.html
@@ -111,7 +111,7 @@
 <header>
   <div id="side-menu" style="height: 120px;">
 		<div class="menu-item"><a href="../Home-Mobile">Home</a></div>
-    <div class="menu-item"><a href="../Authors/ItsBailey">Author</a></div>
+    <div class="menu-item"><a href="../Authors/ItsbaileyX">Author</a></div>
 	</div>
 	<div id="menu-toggle" style="font-size: x-large">&#9776;</div>
 	<script>
@@ -218,7 +218,7 @@ while True:
       Feel free to experiment with different prompt messages, parameters, and models to improve the chatbot's performance.
       And thats all from me, make sure to check out the other blogs on this site and have a blessed day.
   </p><br>
-  <p>Created by <a href="../authors/ItsBailey">ItsBailey</a></p>
+  <p>Created by <a href="../authors/ItsbaileyX">ItsbaileyX</a></p>
   <br><br><br>
   <a class="button" href="../Home">Back To Home</a>
   <div style="margin-top:30px;"></div>
