--- a/Blogs/Template-Mobile.html
+++ b/Blogs/Template-Mobile.html
@@ -111,7 +111,7 @@
 <header>
   <div id="side-menu" style="height: 120px;">
 		<div class="menu-item"><a href="../Home-Mobile">Home</a></div>
-    <div class="menu-item"><a href="../Authors/ItsBailey">Author</a></div>
+    <div class="menu-item"><a href="../Authors/ItsbaileyX">Author</a></div>
 	</div>
 	<div id="menu-toggle" style="font-size: x-large">&#9776;</div>
 	<script>
@@ -154,7 +154,7 @@
 
   <br><br><br>
   <p>Created by <a href="../authors/RangerRhino23">RangerRhino23</a></p>
-  <p>Created by <a href="../authors/ItsBailey" style="color: salmon; text-decoration: none;">ItsBailey</a></p>
+  <p>Created by <a href="../authors/ItsbaileyX" style="color: salmon; text-decoration: none;">ItsbaileyX</a></p>
   <br><br><br><br><br><br><br><br><br>
   <a class="button" href="../Home">Back To Home</a>
   <div style="margin-top:30px;"></div>
