--- a/Blogs/The-History-Of-Python-Mobile.html
+++ b/Blogs/The-History-Of-Python-Mobile.html
@@ -110,7 +110,7 @@
 <header>
   <div id="side-menu" style="height: 120px;">
 		<div class="menu-item"><a href="../Home-Mobile">Home</a></div>
-    <div class="menu-item"><a href="../Authors/ItsBailey">Author</a></div>
+    <div class="menu-item"><a href="../Authors/ItsbaileyX">Author</a></div>
 	</div>
 	<div id="menu-toggle" style="font-size: x-large">&#9776;</div>
 	<script>
@@ -216,7 +216,7 @@
 </p>
 
 <br><br><br>
-<p>Created by <a href="../authors/ItsBailey">ItsBailey</a></p>
+<p>Created by <a href="../authors/ItsbaileyX">ItsbaileyX</a></p>
 <br><br><br>
 <a class="button" href="../Home">Back To Home</a>
 <div style="margin-top:30px;"></div>
