--- a/Blogs/Using-Sockets-For-Networking.html
+++ b/Blogs/Using-Sockets-For-Networking.html
@@ -220,7 +220,7 @@ def remove_client(self, client_socket):
         people outside your network you will need to port forward your IP. Anways, thank you for
         reading this blog and have an amazing day!
     <div style="margin-top:200px;"></div>
-    <p>Created by <a href="../authors/ItsBailey">ItsBailey</a></p>
+    <p>Created by <a href="../authors/ItsbaileyX">ItsbaileyX</a></p>
     <div style="margin-top:40px;"></div>
     <a class="button" href="../Home">Back To Home</a>
     <div style="margin-top:60px;"></div>
