little clean-up

--- a/Blogs/Creating-A-Website-With-Flask.html
+++ b/Blogs/Creating-A-Website-With-Flask.html
@@ -17,7 +17,7 @@
 		menuToggle.addEventListener("click", function() {
 			sideMenu.classList.toggle("active");
 		});
-	</script><script src="../DeviceDetermenor.js">
+	</script><script src="BlogDeviceDeterminator.js">
     </script>
   </header>
 <body>
