--- a/Blogs/The-History-Of-Python-Mobile.html
+++ b/Blogs/The-History-Of-Python-Mobile.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terminal Games With Python | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style-mobile.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../icon.png">  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+    <link rel="HomeImages/icon" type="image/x-HomeImages/icon" href="../HomeImages/icon.png">  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
   crossorigin="anonymous"></script>
     <style>
       .img-preset {
@@ -69,7 +69,7 @@
             height: 40px;
             border-radius: 50%;
             background-color: #383838;
-            background-image: url("../copy.webp");
+            background-image: url("../HomeImages/copy.webp");
             color: #fff;
             background-size: 36px;
             background-position: center;
@@ -122,7 +122,7 @@
 		});
 	</script>
   <p style="float: center; display: inline;">PyBlog</p>
-  <a href=""><img style="float: right; margin-right: 16px; margin-top: 12px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../icon.png"></a>
+  <a href=""><img style="float: right; margin-right: 16px; margin-top: 12px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../HomeImages/icon.png"></a>
   </header>
 <body>
   <script>
