--- a/Home-Mobile.html
+++ b/Home-Mobile.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="style-mobile.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="icon.png">
+    <link rel="HomeImages/icon" type="image/x-HomeImages/icon" href="HomeImages/icon.png">
     <meta property="og:title" content="Homepage of pyblog">
     <meta property="og:description" content="Only the best blogs can be found here">
-    <meta property="og:image" content="https://pyblog.ddns.net/icon.png">
+    <meta property="og:image" content="https://pyblog.ddns.net/HomeImages/icon.png">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
     crossorigin="anonymous"></script>
     <style>
@@ -128,7 +128,7 @@
 		});
 	</script>
   <!--<p style="display: inline; justify-self: center;">PyBlog</p>-->
-  <a href=""><img alt="PyBlog" style="float: center; margin-right: 16px; margin-top: 12px;width:180px;height:40px; border-radius:10px;object-fit: cover" src="icon.png"></a>
+  <a href=""><img alt="PyBlog" style="float: center; margin-right: 16px; margin-top: 12px;width:180px;height:40px; border-radius:10px;object-fit: cover" src="HomeImages/icon.png"></a>
   <div id="search-menu">
 		<div class="search-item">
       <form action="search-mobile.html" method="GET">
@@ -295,7 +295,7 @@
 </body>
 <footer style="margin-top: 50px; margin-bottom: 20px">
   <a id="backtotopbtn" class="button" style="background-color: black; color: white; cursor: pointer; padding-left: 20%; padding-right: 20%;">Back to Top</a>
-    <script src="Scroll.js"></script>
+    <script src="javascript/Scroll.js"></script>
       <!--Proceedual loading-->
       <script>
         let grid1 = "true"
