--- a/search-mobile.html
+++ b/search-mobile.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style-mobile.css" media="screen" />
-  <link rel="icon" type="image/x-icon" href="icon.png">
+  <link rel="HomeImages/icon" type="image/x-HomeImages/icon" href="HomeImages/icon.png">
   <meta property="og:title" content="Search for blogs">
   <meta property="og:description" content="Use this page to search for various blogs that can be found on the website.">
-  <meta property="og:image" content="https://pyblog.ddns.net/icon.png">
+  <meta property="og:image" content="https://pyblog.ddns.net/HomeImages/icon.png">
   <title>Search Restuls | Pyblog</title>
   <style>
     .result-container {
@@ -68,7 +68,7 @@
 		});
 	</script>
   <!--<p style="display: inline; justify-self: center;">PyBlog</p>-->
-  <a href=""><img style="float: center; margin-right: 16px; margin-top: 12px;width:180px;height:40px; border-radius:10px;object-fit: cover" src="icon.png"></a>
+  <a href=""><img style="float: center; margin-right: 16px; margin-top: 12px;width:180px;height:40px; border-radius:10px;object-fit: cover" src="HomeImages/icon.png"></a>
   <div id="search-menu">
 		<div class="search-item">
       <form action="search-mobile.html" method="GET">
@@ -96,6 +96,6 @@
   </div>
 
   <div style="margin-top:35%;"></div>
-  <script src="search_result-mobile.js"></script>
+  <script src="javascript/search_result-mobile.js"></script>
 </body>
 </html>
