--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>404 | PyBlog</title>
-    <link rel="icon" type="image/x-icon" href="icon_rounded.webp">
+    <link rel="HomeImages/icon" type="image/x-HomeImages/icon" href="HomeImages/HomeImages/icon_rounded.webp">
     <style>
       body {
             background-color: #f2f2f2;
@@ -137,7 +137,7 @@
   </head>
 <header>
   <ul class="menu">
-    <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../icon.png"></li>
+    <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../HomeImages/icon.png"></li>
     <li><a href="/Home" class="hover-underline-animation">Home</a></li>
     <li><a href="/About-Authors" class="hover-underline-animation">Authors</a></li>
     <li>
