--- a/Blogs/Creating-Minecraft-In-Ursina.html
+++ b/Blogs/Creating-Minecraft-In-Ursina.html
@@ -5,122 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creating Minecraft In Ursina | PyBlog</title>
-    <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../icon_rounded.webp">
+
     <meta property="og:title" content="A pyblog blog">
     <meta property="og:description" content="Only the best blogs can be found here">
-    <meta property="og:image" content="https://pyblog.ddns.net/icon.png">
-    <!-- untag this when blog complete! <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
-    crossorigin="anonymous"></script>-->
-    <style>
-      .img-preset {
-        width: auto;
-        height: auto;
-        border-radius: 5px;
-        object-fit: cover;
-        max-width: 40%;
-      }
+    <meta property="og:image" content="https://pyblog.ddns.net/HomeImages/icon.png">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+    crossorigin="anonymous"></script>
 
-      p {
-        color: whitesmoke;
-        width: 500px;
-        margin: auto;
-        font-size: larger;
-      }
-
-      pre {
-          background-color: #000000;
-          border: 1px solid #ccc;
-          padding: 10px;
-          margin: 0;
-          width: auto;
-          text-align: left;
-          display: inline-block;
-      }
-
-      code {
-          display: block;
-          font-size: 14px;
-          line-height: 1.5;
-          overflow-x: auto;
-          white-space: pre-wrap;
-          word-wrap: break-word;
-          color: #333;
-      }
-      .copy-button {
-          display: inline-block;
-          width: 40px;
-          height: 40px;
-          border-radius: 50%;
-          background-color: #383838;
-          background-image: url("../copy.webp");
-          color: #fff;
-          background-size: 36px;
-          background-position: center;
-          text-align: center;
-          line-height: 40px;
-          cursor: pointer;
-          position: relative;
-      }
-
-      .copy-button:before {
-        font-family: "FontAwesome";
-        font-size: 20px;
-        position: absolute;
-        top: 10px;
-        left: 10px;
-      }
-
-      .copy-button:hover:before {
-        content: "Copy code";
-        font-family: Arial, sans-serif;
-        font-size: 12px;
-        color: #fff;
-        top: -30px;
-        left: -10px;
-        white-space: nowrap;
-      }
-      .copy-button.clicked:before {
-        content: "Copied code";
-        font-family: Arial, sans-serif;
-        font-size: 12px;
-        color: #fff;
-        top: -30px;
-        left: -10px;
-        white-space: nowrap;
-      }
-    </style>
   </head>
-  <header>
-    <ul class="menu">
-      <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../icon.png"></li>
-      <li><a href="../Home" class="hover-underline-animation">Home</a></li>
-      <li>
-        <form action="../search.html" method="GET" class="search-bar">
-          <input type="text" name="query" placeholder="&#x1F50E;&#xFE0E; Search..." value="" required>
-          <button type="submit">Search</button>
-        </form>
-      </li>
-    </ul>
+  <header>	<script>
+		var menuToggle = document.getElementById("menu-toggle");
+		var sideMenu = document.getElementById("side-menu");
+		
+		menuToggle.addEventListener("click", function() {
+			sideMenu.classList.toggle("active");
+		});
+	</script>
+<script src="../DeviceDetermenor.js"></script>
   </header>
   <body>
-    <script>
-      function isMobileDevice() {
-        const userAgent = navigator.userAgent.toLowerCase();
-        const mobileKeywords = ['android', 'webos', 'iphone', 'ipad', 'ipod', 'blackberry', 'windows phone'];
-    
-        return mobileKeywords.some(keyword => userAgent.includes(keyword));
-      }
-    
-      if (isMobileDevice()) {
-        window.location.replace("https://pyblog.ddns.net/Blogs/Template-Mobile")
-      } else {
-        ;
-      }
-    </script>
     <br><br>
     <!--Optional image placement-->
-    <img src="home-page-images\Minecraft-Ursina.webp" class="img-preset">
+    <img src="home-page-images\Minecraft-Ursina.webp" class="img-preset" alt="Image of ursina minecraft" style="height: 250px; width: 500px">
     <h1>Creating A Minecraft Clone In Ursina</h1>
     <h3>Difficulty: Intermediate</h3>
 
@@ -238,7 +144,7 @@ app.run()
   </body>
   <footer style="margin-top: 50px; margin-bottom: 20px">
     <a id="backtotopbtn" class="button" style="background-color: black; color: white; cursor: pointer; padding-left: 20%; padding-right: 20%;">Back to Top</a>
-    <script src="../Scroll.js">
+    <script src="../javascript/Scroll.js">
     </script>
   </footer>
 </html>
