--- a/Blogs/How-To-Use-VSCode.html
+++ b/Blogs/How-To-Use-VSCode.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How To Use VS Code | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../icon_rounded.webp">    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+    <link rel="HomeImages/icon" type="image/x-HomeImages/icon" href="../HomeImages/HomeImages/icon_rounded.webp">    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
      crossorigin="anonymous"></script>
     <style>
       .img-preset {
@@ -49,7 +49,7 @@
             height: 40px;
             border-radius: 50%;
             background-color: #383838;
-            background-image: url("../copy.webp");
+            background-image: url("../HomeImages/copy.webp");
             color: #fff;
             background-size: 36px;
             background-position: center;
@@ -89,7 +89,7 @@
   </head>
   <header>
     <ul class="menu">
-      <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../icon.png"></li>
+      <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../HomeImages/icon.png"></li>
       <li><a href="../Home" class="hover-underline-animation">Home</a></li>
       <li>
         <form action="../search.html" method="GET" class="search-bar">
@@ -139,7 +139,7 @@
     <h2>Customizing the Environment</h2>
     <p>
       Visual Studio Code offers a high level of customization to suit your workflow preferences. You can access the settings by clicking 
-      on the gear icon in the sidebar or by using the keyboard shortcut "Ctrl + ,". Explore the various options available, such as 
+      on the gear HomeImages/icon in the sidebar or by using the keyboard shortcut "Ctrl + ,". Explore the various options available, such as 
       changing the theme, modifying font settings, and configuring keybindings. Customize your setup to make it visually appealing and efficient.
     </p>
 
@@ -192,7 +192,7 @@
   </body>
   <footer style="margin-top: 50px; margin-bottom: 20px">
     <a id="backtotopbtn" class="button" style="background-color: black; color: white; cursor: pointer; padding-left: 20%; padding-right: 20%;">Back to Top</a>
-    <script src="../Scroll.js">
+    <script src="../javascript/Scroll.js">
     </script>
   </footer>
 </html>
