--- a/Blogs/Introduction-To-Pyweek.html
+++ b/Blogs/Introduction-To-Pyweek.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intro to pyweek | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../icon_rounded.webp">
+    <link rel="HomeImages/icon" type="image/x-HomeImages/icon" href="../HomeImages/HomeImages/icon_rounded.webp">
     <meta property="og:title" content="What is pyweek?">
     <meta property="og:description" content="Pyblog where only the best python blogs are found">
-    <meta property="og:image" content="https://pyblog.ddns.net/icon.png">
+    <meta property="og:image" content="https://pyblog.ddns.net/HomeImages/icon.png">
     <!-- untag this when blog complete! <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
     crossorigin="anonymous"></script>-->
     <style>
@@ -53,7 +53,7 @@
             height: 40px;
             border-radius: 50%;
             background-color: #383838;
-            background-image: url("../copy.webp");
+            background-image: url("../HomeImages/copy.webp");
             color: #fff;
             background-size: 36px;
             background-position: center;
@@ -93,7 +93,7 @@
   </head>
   <header>
     <ul class="menu">
-      <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../icon.png"></li>
+      <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../HomeImages/icon.png"></li>
       <li><a href="../Home" class="hover-underline-animation">Home</a></li>
       <li>
         <form action="../search.html" method="GET" class="search-bar">
@@ -166,7 +166,7 @@
   </body>
   <footer style="margin-top: 50px; margin-bottom: 20px">
     <a id="backtotopbtn" class="button" style="background-color: black; color: white; cursor: pointer; padding-left: 20%; padding-right: 20%;">Back to Top</a>
-    <script src="../Scroll.js">
+    <script src="../javascript/Scroll.js">
     </script>
   </footer>
 </html>
