--- a/Blogs/Making-A-Chatbot-With-Python.html
+++ b/Blogs/Making-A-Chatbot-With-Python.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Making a chatbot with python | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../icon_rounded.webp">
+    <link rel="HomeImages/icon" type="image/x-HomeImages/icon" href="../HomeImages/HomeImages/icon_rounded.webp">
     <style>
       .img-preset {
         width: 250px;
@@ -46,7 +46,7 @@
             height: 40px;
             border-radius: 50%;
             background-color: #383838;
-            background-image: url("../copy.webp");
+            background-image: url("../HomeImages/copy.webp");
             color: #fff;
             background-size: 36px;
             background-position: center;
@@ -111,7 +111,7 @@
   </head>
   <header>
     <ul class="menu">
-      <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../icon.png"></li>
+      <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../HomeImages/icon.png"></li>
       <li><a href="../Home" class="hover-underline-animation">Home</a></li>
       <li>
         <form action="../search.html" method="GET" class="search-bar">
@@ -239,7 +239,7 @@ while True:
   </body>
   <footer style="margin-top: 50px; margin-bottom: 20px">
     <a id="backtotopbtn" class="button" style="background-color: black; color: white; cursor: pointer; padding-left: 20%; padding-right: 20%;">Back to Top</a>
-    <script src="../Scroll.js">
+    <script src="../javascript/Scroll.js">
     </script>
     <!DOCTYPE html>
     <html lang="en">
