--- a/Home.html
+++ b/Home.html
@@ -8,10 +8,10 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
     crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="icon.png">
+    <link rel="HomeImages/icon" type="image/x-HomeImages/icon" href="HomeImages/icon.png">
     <meta property="og:title" content="Homepage of pyblog">
     <meta property="og:description" content="Only the best blogs can be found here">
-    <meta property="og:image" content="https://pyblog.ddns.net/icon.png">
+    <meta property="og:image" content="https://pyblog.ddns.net/HomeImages/icon.png">
     
     <style>
       .img-preset {
@@ -81,7 +81,7 @@
   </head>
   <header>
     <ul class="menu">
-      <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="icon.png"></li>
+      <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="HomeImages/icon.png"></li>
       <li><a href="#" class="hover-underline-animation">Home</a></li>
       <li><a href="#about-pyblog" class="hover-underline-animation">About PyBlog</a></li>
       <li><a href="#fun-blogs" class="hover-underline-animation">Fun Blogs</a></li>
@@ -113,7 +113,7 @@
     
     </script>
     <br><br><br>
-    <img src="icon.png" class="img-preset"/>
+    <img src="HomeImages/icon.png" class="img-preset"/>
 
     <!-- About PyBlog -->
     <h2 id="about-pyblog">About PyBlog</h2>
@@ -248,7 +248,7 @@
   </body>
   <footer style="margin-top: 50px; margin-bottom: 20px">
     <a id="backtotopbtn" class="button" style="background-color: black; color: white; cursor: pointer; padding-left: 20%; padding-right: 20%;">Back to Top</a>
-    <script src="Scroll.js">
+    <script src="javascript/Scroll.js">
     </script>
   <!--Proceedual loading-->
     <script>
