--- a/index.html
+++ b/index.html
@@ -2,16 +2,11 @@
 <html lang="en">
   <head>
     <title>Redirecting... | PyBlog</title>
-    <link rel="icon" type="image/x-icon" href="icon.ico">
+    <link rel="HomeImages/icon" type="image/x-HomeImages/icon" href="HomeImages/icon.ico">
     <style>
-      .img-preset {
-        width: 250px;
-        height: 350px;
-        border-radius: 5px;
-        object-fit: cover;
-      }
 
-      .paragraph {
+
+      .p {
             color: whitesmoke;
             width: 500px;
             margin: auto;
@@ -25,16 +20,6 @@
           text-align: center;
         }
 
-        h1 {
-         color: rgb(119, 102, 79);
-         margin-top: 50px;
-         }
-
-         h2 {
-         color: white;
-         margin-top: 50px;
-         font-size: 25px
-         }
 
          .button-container {
          display: flex;
@@ -88,7 +73,7 @@
   </head>
   <header>
     <ul class="menu">
-      <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="icon.png"></li>
+      <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="HomeImages/icon.png"></li>
       <li><a href="#" class="hover-underline-animation">Home</a></li>
   </ul>
   </header>
