--- a/search.html
+++ b/search.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-  <link rel="icon" type="image/x-icon" href="icon.png">
+  <link rel="HomeImages/icon" type="image/x-HomeImages/icon" href="HomeImages/icon.png">
   <meta property="og:title" content="Search for blogs">
   <meta property="og:description" content="Use this page to search for various blogs that can be found on the website.">
-  <meta property="og:image" content="https://pyblog.ddns.net/icon.png">
+  <meta property="og:image" content="https://pyblog.ddns.net/HomeImages/icon.png">
   <title>Search Results | Pyblog</title>
   <style>
     .result-container {
@@ -54,7 +54,7 @@
 </head>
 <header>
   <ul class="menu">
-    <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="icon.png"></li>
+    <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="HomeImages/icon.png"></li>
     <li><a href="Home" class="hover-underline-animation">Home</a></li>
     <li><a href="Authors/" class="hover-underline-animation">Authors</a></li>
     <li>
@@ -73,6 +73,6 @@
   </div>
 
   <div style="margin-top:35%;"></div>
-  <script src="search_result.js"></script>
+  <script src="javascript/search_result.js"></script>
 </body>
 </html>
