quick replace messed some crap up, here fix :)

--- a/Blogs/Creating-A-Website-With-Flask.html
+++ b/Blogs/Creating-A-Website-With-Flask.html
@@ -10,14 +10,7 @@
 
 </head>
 <header>
-	<script>
-		var menuToggle = document.getElementById("menu-toggle");
-		var sideMenu = document.getElementById("side-menu");
-		
-		menuToggle.addEventListener("click", function() {
-			sideMenu.classList.toggle("active");
-		});
-	</script><script src="BlogDeviceDeterminator.js">
+<script src="BlogDeviceDeterminator.js">
     </script>
   </header>
 <body>
