--- a/Blogs/Creating-Minecraft-In-Ursina.html
+++ b/Blogs/Creating-Minecraft-In-Ursina.html
@@ -13,15 +13,8 @@
     crossorigin="anonymous"></script>
 
   </head>
-  <header>	<script>
-		var menuToggle = document.getElementById("menu-toggle");
-		var sideMenu = document.getElementById("side-menu");
-		
-		menuToggle.addEventListener("click", function() {
-			sideMenu.classList.toggle("active");
-		});
-	</script>
-<script src="../DeviceDetermenor.js"></script>
+  <header>
+<script src="BlogDeviceDeterminator.js"></script>
   </header>
   <body>
     <br><br>
