--- a/Blogs/Creating-Simulations-With-Python.html
+++ b/Blogs/Creating-Simulations-With-Python.html
@@ -9,15 +9,8 @@
      crossorigin="anonymous"></script>
 
   </head>
-  <header>	<script>
-		var menuToggle = document.getElementById("menu-toggle");
-		var sideMenu = document.getElementById("side-menu");
-		
-		menuToggle.addEventListener("click", function() {
-			sideMenu.classList.toggle("active");
-		});
-	</script>
-    <script src="../DeviceDetermenor.js">
+  <header>
+    <script src="BlogDeviceDeterminator.js">
     </script>
   </header>
   <body>
