--- a/Blogs/Creating-A-Website-With-Flask.html
+++ b/Blogs/Creating-A-Website-With-Flask.html
@@ -17,7 +17,7 @@
 
   <br><br>
   <!--Optional image placement-->
-  <img src="Flask-stuff/Flask.webp" style="zoom:0.6;" class="img-preset">
+  <img src="Flask-stuff/Flask.webp" style="zoom:0.6;" class="img-preset" alt="Flask">
   <h1>Creating web applications with python flask.</h1><br>
   <h3>Difficulty: Intermediate</h3>
 
@@ -74,7 +74,7 @@ app.run('localhost', 5000)
   </code>         <div class="copy-button" onclick="copyCode('code-block-3')"></div></pre>
   <br><br>
   <p>If you did everything correctly, the webpage should look like this!</p><br>
-  <img src="Flask-stuff/first-website-result.webp" class="img-preset">
+  <img src="Flask-stuff/first-website-result.webp" class="img-preset" alt="First website result">
   <br>
   <p>
     Now you're thinking, how do you create proper websites with it because just adding
