--- a/Blogs/Creating-Minecraft-In-Ursina.html
+++ b/Blogs/Creating-Minecraft-In-Ursina.html
@@ -19,7 +19,7 @@
   <body>
     <br><br>
     <!--Optional image placement-->
-    <img src="home-page-images\Minecraft-Ursina.webp" class="img-preset" alt="Image of ursina minecraft" style="height: 250px; width: 500px">
+    <img src="home-page-images\Minecraft-Ursina.webp" class="img-preset" alt="Image of ursina minecraft" style="height: 250px; width: 500px" alt="An image
     <h1>Creating A Minecraft Clone In Ursina</h1>
     <h3>Difficulty: Intermediate</h3>
 
