--- a/Blogs/Creating-Simulations-With-Python.html
+++ b/Blogs/Creating-Simulations-With-Python.html
@@ -17,7 +17,7 @@
 
 
     <br><br>
-    <img src="home-page-images/Creating-Simulations.webp" style="width: 30%;" alt="Just an image">
+    <img src="home-page-images/Creating-Simulations.webp" style="width: 30%;" alt="Just an image" alt="Simulations">
     <h1>Creating Simulations With Python</h1>
     <h3>Difficulty: Intermediate</h3>
 
