--- a/Blogs/Deeper-Exploration-of-Tkinter.html
+++ b/Blogs/Deeper-Exploration-of-Tkinter.html
@@ -108,7 +108,7 @@
   </head>
   <header>
     <ul class="menu">
-      <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../HomeImages/icon.png"></li>
+      <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" alt="Icon, probably" src="../HomeImages/icon.png"></li>
       <li><a href="../Home" class="hover-underline-animation">Home</a></li>
       <li><a href="../Blogs/Desktop-Applications-With-Tkinter.html" class="hover-underline-animation">Previous blog</a></li>
       <li>
