--- a/Blogs/Desktop-Applications-With-Tkinter-Mobile.html
+++ b/Blogs/Desktop-Applications-With-Tkinter-Mobile.html
@@ -123,7 +123,7 @@
 		});
 	</script>
   <p style="float: center; display: inline;">PyBlog</p>
-  <a href=""><img style="float: right; margin-right: 16px; margin-top: 12px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../HomeImages/icon.png"></a>
+  <a href=""><img style="float: right; margin-right: 16px; margin-top: 12px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../HomeImages/icon.png" alt="Icon"></a>
   </header>
 <body>
   <script>
@@ -144,7 +144,7 @@
 
   <!-- MAIN STUFF-->
   <br><br>
-  <img src="home-page-images/Desktop-Tkinter.webp" class="img-preset" style="zoom:0.75;">
+  <img src="home-page-images/Desktop-Tkinter.webp" class="img-preset" style="zoom:0.75;" alt="Tkinter">
   <h1>Desktop Apps with Tkinter!</h1>
   <h3>Difficulty: Beginner</h3>
 
