--- a/Blogs/Python-Fundamentals-Mobile.html
+++ b/Blogs/Python-Fundamentals-Mobile.html
@@ -145,7 +145,7 @@
 		});
 	</script>
   <p style="float: center; display: inline;">PyBlog</p>
-  <a href=""><img style="float: right; margin-right: 16px; margin-top: 12px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../HomeImages/icon.png"></a>
+  <a href=""><img style="float: right; margin-right: 16px; margin-top: 12px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../HomeImages/icon.png" alt="Icon"></a>
   </header>
 <body>
   <script>
