--- a/Home.html
+++ b/Home.html
@@ -19,7 +19,7 @@
     <script src="javascript/HomeDeviceDeterminator.js">
     </script>
     <br><br><br>
-    <img src="HomeImages/icon.png" class="img-preset"/>
+    <img src="HomeImages/icon.png" class="img-preset" alt="Icon image"/>
 
     <!-- About PyBlog -->
     <h2 id="about-pyblog">About PyBlog</h2>
@@ -37,37 +37,37 @@
     <!-- Fun Blogs -->
     <div class="grid-container" id="gridContainer1" style = "display: grid;">
       <div class="grid-item" onclick="window.location.href='Blogs/Python-Introduction'" style="cursor: pointer;">
-        <img src="Blogs/home-page-images/Python-Introduction.webp" class="blog-img">
+        <img src="Blogs/home-page-images/Python-Introduction.webp" class="blog-img" alt="Python intro image">
         <p><b>
           What is Python?
         </b></p>
       </div>
       <div class="grid-item" onclick="window.location.href='Blogs/Python-Fundamentals'" style="cursor: pointer;">
-        <img src="Blogs/home-page-images/Python-Fundamentals.webp" class="blog-img">
+        <img src="Blogs/home-page-images/Python-Fundamentals.webp" class="blog-img" alt="Fundamentals">
         <p><b>
           Python Fundamentals
         </b></p>
       </div>
       <div class="grid-item" onclick="window.location.href='Blogs/Desktop-Applications-With-Tkinter'" style="cursor: pointer;">
-        <img src="Blogs/home-page-images/Desktop-Tkinter.webp" class="blog-img">
+        <img src="Blogs/home-page-images/Desktop-Tkinter.webp" class="blog-img" alt="Tkinter">
         <p><b>
           Building Desktop Applications With Tkinter
         </b></p>
       </div>
       <div class="grid-item" onclick="window.location.href='Blogs/Deeper-Exploration-of-Tkinter'" style="cursor: pointer;">
-        <img src="Blogs/home-page-images/Deeper-Exploration-Tkinter.webp" class="blog-img">
+        <img src="Blogs/home-page-images/Deeper-Exploration-Tkinter.webp" class="blog-img" alt="Deeper tkinter">
         <p><b>
           Deeper Exploration of Tkinter
         </b></p>
       </div>
       <div class="grid-item" onclick="window.location.href='Blogs/Introduction-Into-Ursina'" style="cursor: pointer;">
-        <img src="Blogs/home-page-images/Introduction-Into-Ursina.webp" class="blog-img">
+        <img src="Blogs/home-page-images/Introduction-Into-Ursina.webp" class="blog-img" alt="Intro to ursina">
         <p><b>
           Introduction Into Ursina Engine
         </b></p>
       </div>
       <div class="grid-item" onclick="window.location.href='Blogs/Making-a-Chatbot-With-Python'" style="cursor: pointer;">
-        <img src="Blogs/home-page-images/Making-Chatbot-With-Python.webp" class="blog-img">
+        <img src="Blogs/home-page-images/Making-Chatbot-With-Python.webp" class="blog-img" alt="chatbot with python">
         <p><b>
           Making a Chatbot With Python
         </b></p>
@@ -75,37 +75,37 @@
     </div>
     <div class="grid-container" id="gridContainer2" style="display: none;">
       <div class="grid-item" onclick="window.location.href='Blogs/Machine-Learning-With-Python'" style="cursor: pointer;">
-        <img src="Blogs/home-page-images/Machine-Learning.webp" class="blog-img">
+        <img src="Blogs/home-page-images/Machine-Learning.webp" class="blog-img" alt="Machine learning with python">
         <p><b>
           Machine Learning With Python
         </b></p>
       </div>
       <div class="grid-item" onclick="window.location.href='Blogs/Creating-Simulations-With-Python'" style="cursor: pointer;">
-       <img src="Blogs/home-page-images/Creating-Simulations.webp" class="blog-img">
+       <img src="Blogs/home-page-images/Creating-Simulations.webp" class="blog-img" alt="Simulations with python">
        <p><b>
         Creating Simulations With Python
        </b></p>
      </div>
      <div class="grid-item" onclick="window.location.href='Blogs/Creating-a-Website-With-Flask'" style="cursor: pointer;">
-      <img src="Blogs/Flask-stuff/Flask.webp" class="blog-img">
+      <img src="Blogs/Flask-stuff/Flask.webp" class="blog-img" alt="Creating a website with flask, python">
       <p><b>
         Making a website With flask
       </b></p>
       </div>
       <div class="grid-item" onclick="window.location.href='Blogs/Using-Sockets-For-Networking'" style="cursor: pointer;">
-        <img src="Blogs/home-page-images/Sockets.webp" class="blog-img">
+        <img src="Blogs/home-page-images/Sockets.webp" class="blog-img" alt="Using sockets">
         <p><b>
           Using sockets for networking
         </b></p>
       </div>
       <div class="grid-item" onclick="window.location.href='Blogs/The-History-Of-Python'" style="cursor: pointer;">
-        <img src="Blogs/home-page-images/time.webp" class="blog-img">
+        <img src="Blogs/home-page-images/time.webp" class="blog-img" alt="History of python">
         <p><b>
           The history of python
         </b></p>
       </div>
       <div class="grid-item" onclick="window.location.href='Blogs/Terminal-Games-With-Python'" style="cursor: pointer;">
-        <img src="Blogs/home-page-images/Terminal-Games.webp" class="blog-img">
+        <img src="Blogs/home-page-images/Terminal-Games.webp" class="blog-img" alt="Terminal games with python">
         <p><b>
           Terminal Games Using Python
         </b></p>
@@ -113,13 +113,13 @@
     </div>
     <div class="grid-container" id="gridContainer3" style="display: none;">
       <div class="grid-item" onclick="window.location.href='Blogs/Types-Of-Modules-And-Using-Them'" style="cursor: pointer;">
-        <img src="Blogs/home-page-images/Modules.webp" class="blog-img">
+        <img src="Blogs/home-page-images/Modules.webp" class="blog-img" alt="Modules and using them">
         <p><b>
           Types of modules in python
         </b></p>
       </div>
       <div class="grid-item" onclick="window.location.href='Blogs/Creating-Minecraft-In-Ursina'" style="cursor: pointer;">
-        <img src="Blogs/home-page-images/Minecraft-Ursina.webp" class="blog-img">
+        <img src="Blogs/home-page-images/Minecraft-Ursina.webp" class="blog-img" alt="Minecraft in ursina, python">
         <p><b>
           Creating A Minecraft Clone With Ursina
         </b></p>
@@ -136,13 +136,13 @@
     <!-- Helpful Blogs-->
     <div class="grid-container">
       <div class="grid-item" onclick="window.location.href='Blogs/Installing-Python'" style="cursor: pointer;">
-        <img src="Blogs/Python-Introduction-Files/python_logo.webp" class="blog-img">
+        <img src="Blogs/Python-Introduction-Files/python_logo.webp" class="blog-img" alt="Installing python">
         <p><b>
           Installing Python
         </b></p>
       </div>
       <div class="grid-item" onclick="window.location.href='Blogs/How-To-Use-VSCode'" style="cursor: pointer;">
-        <img src="Blogs/home-page-images/VS-Code.webp" class="blog-img">
+        <img src="Blogs/home-page-images/VS-Code.webp" class="blog-img" alt="Setting up VS code">
         <p><b>
           Installing and Using VS Code
         </b></p>
