--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   </head>
   <header>
     <ul class="menu">
-      <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="HomeImages/icon.png"></li>
+      <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="HomeImages/icon.png" alt="Homepage"></li>
       <li><a href="#" class="hover-underline-animation">Home</a></li>
   </ul>
   </header>
