--- a/search.html
+++ b/search.html
@@ -62,7 +62,7 @@
 <header>
   <div id="desktop-header" class="desktop">
     <ul class="menu">
-      <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="HomeImages/icon.png"></li>
+      <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="HomeImages/icon.png" alt="Icon"></li>
       <li><a href="Home" class="hover-underline-animation">Home</a></li>
       <li><a href="Authors/" class="hover-underline-animation">Authors</a></li>
       <li>
@@ -88,7 +88,7 @@
         document.body.classList.toggle('overflow-hidden');
       });
     </script>
-    <a href=""><img style="float: center; margin-right: 16px; margin-top: 12px;width:180px;height:40px; border-radius:10px;object-fit: cover" src="HomeImages/icon.png"></a>
+    <a href=""><img style="float: center; margin-right: 16px; margin-top: 12px;width:180px;height:40px; border-radius:10px;object-fit: cover" src="HomeImages/icon.png" alt="Icon"></a>
 <div id="search-menu" class><div class="search-item">
 <form action="search.html" method="GET" class="search-bar" >
   <input type="text" name="query" placeholder="&#x1F50E;&#xFE0E; Search..." required id="mobile-search-form">
