--- a/404.html
+++ b/404.html
@@ -137,7 +137,7 @@
   </head>
 <header>
   <ul class="menu">
-    <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../HomeImages/icon.png"></li>
+    <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../HomeImages/icon.png" alt="just an image"></li>
     <li><a href="/Home" class="hover-underline-animation">Home</a></li>
     <li><a href="/About-Authors" class="hover-underline-animation">Authors</a></li>
     <li>
