--- a/Blogs/Template.html
+++ b/Blogs/Template.html
@@ -93,7 +93,7 @@
   </head>
   <header>
     <ul class="menu">
-      <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../HomeImages/icon.png"></li>
+      <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../HomeImages/icon.png" alt="Icon"></li>
       <li><a href="../Home" class="hover-underline-animation">Home</a></li>
       <li>
         <form action="../search.html" method="GET" class="search-bar">
