--- a/Blogs/The-History-Of-Python.html
+++ b/Blogs/The-History-Of-Python.html
@@ -91,7 +91,7 @@
   </head>
   <header>
     <ul class="menu">
-      <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../HomeImages/icon.png"></li>
+      <li><img style="margin-left: 6px; margin-right: 6px; margin-top: 5px;width:40px;height:40px; border-radius:100px;object-fit: cover" src="../HomeImages/icon.png" alt="Icon"></li>
       <li><a href="../Home" class="hover-underline-animation">Home</a></li>
   </ul>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
