--- a/Blogs/The-History-Of-Python.html
+++ b/Blogs/The-History-Of-Python.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The History of python | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
-    <link rel="HomeImages/icon" type="image/x-HomeImages/icon" href="../HomeImages/HomeImages/icon_rounded.webp">
+    <link rel="icon" type="image/x-icon" href="../HomeImages/icon_rounded.png">
     <meta property="og:title" content="The history of python">
     <meta property="og:description" content="The entire history of python and what it is">
     <meta property="og:image" content="https://pyblog.ddns.net/Blogs/home-page-images/time.webp">
