--- a/Blogs/Template-Mobile.html
+++ b/Blogs/Template-Mobile.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desktop Applications With Tkinter | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style-mobile.css" media="screen" />
-    <link rel="HomeImages/icon" type="image/x-HomeImages/icon" href="../HomeImages/icon.png">  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
+    <link rel="icon" type="image/x-icon" href="../HomeImages/icon.png">  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
      crossorigin="anonymous"></script>
     <style>
 
