--- a/Home.html
+++ b/Home.html
@@ -7,7 +7,7 @@
     <title>Home | PyBlog</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
     crossorigin="anonymous"></script>
-    <link rel="HomeImages/icon" type="image/x-HomeImages/icon" href="HomeImages/icon.png">
+    <link rel="icon" type="image/x-icon" href="HomeImages/icon.png">
     <meta property="og:title" content="Homepage of pyblog">
     <meta property="og:description" content="Only the best blogs can be found here">
     <meta property="og:image" content="https://pyblog.ddns.net/HomeImages/icon.png">
