--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css" media="screen and (min-width: 769px)" />
   <link rel="stylesheet" type="text/css" href="style-mobile.css" media="screen and (max-width: 768px)" />
-  <link rel="HomeImages/icon" type="image/x-HomeImages/icon" href="HomeImages/icon.png">
+  <link rel="icon" type="image/x-icon" href="HomeImages/icon.png">
   <meta property="og:title" content="Search for blogs">
   <meta property="og:description" content="Use this page to search for various blogs that can be found on the website.">
   <meta property="og:image" content="https://pyblog.ddns.net/HomeImages/icon.png">
