he done biffed it again :/

--- a/Blogs/Python-Fundamentals.html
+++ b/Blogs/Python-Fundamentals.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Python Fundamentals | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../HomeImages/icon_rounded.png">
+    <link rel="icon" type="image/x-icon" href="../HomeImages/icon_rounded.webp">
     <style>
       .img-preset {
         width: 250px;
