--- a/Blogs/Types-Of-Modules-And-Using-Them.html
+++ b/Blogs/Types-Of-Modules-And-Using-Them.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Types of modules | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../HomeImages/icon_rounded.png">
+    <link rel="icon" type="image/x-icon" href="../HomeImages/icon_rounded.webp">
     <meta property="og:title" content="Types of modules">
     <meta property="og:description" content="Discussing python modules and how to use then and what they do in general.">
     <meta property="og:image" content="https://pyblog.ddns.net/HomeImages/icon.png">
