--- a/Blogs/Introduction-To-Pyweek.html
+++ b/Blogs/Introduction-To-Pyweek.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intro to pyweek | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../HomeImages/icon_rounded.png">
+    <link rel="icon" type="image/x-icon" href="../HomeImages/icon_rounded.webp">
     <meta property="og:title" content="What is pyweek?">
     <meta property="og:description" content="Pyblog where only the best python blogs are found">
     <meta property="og:image" content="https://pyblog.ddns.net/HomeImages/icon.png">
