--- a/Blogs/Creating-A-Website-With-Flask.html
+++ b/Blogs/Creating-A-Website-With-Flask.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creating A Website With Flsak | PyBlog</title>
+    <title>Desktop Applications With Tkinter | PyBlog</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
      crossorigin="anonymous"></script>
-
+     <link rel="stylesheet" type="text/css" href="../style.css" media="screen and (min-width: 769px)" />
+     <link rel="stylesheet" type="text/css" href="../style-mobile.css" media="screen and (max-width: 768px)" />
+     <link rel="stylesheet" type="text/css" href="CSS/desktop.css" media="screen and (min-width: 769px)" />
+     <link rel="stylesheet" type="text/css" href="CSS/mobile.css" media="screen and (max-width: 768px)" />
+ 
 </head>
 <header>
-<script src="BlogDeviceDeterminator.js">
-    </script>
-  </header>
+</header>
 <body>
-
+  <head>
+    
+  </head>
+<script src="BlogDeviceDeterminatorV2.js">
+</script>
   <br><br>
   <!--Optional image placement-->
   <img src="Flask-stuff/Flask.webp" style="zoom:0.6;" class="img-preset" alt="Flask">
@@ -31,7 +37,7 @@
   <h2>What is flask?</h2>
   <p>
       Flask is a web framework for Python that allows you to develop web applications easily.
-      It is a microframework that doesn’t include an ORM (Object Relational Manager) or such features.
+      It is a microframework that doesn't include an ORM (Object Relational Manager) or such features.
       Flask provides only the essential components like routing, request handling, sessions, and so on. It provides you with libraries, tools,
       and modules to develop web applications like a blog (like this one), wiki,
       or even a commercial website.
